--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <nav class="nav-main">
-            <img src="Imagenes/a.gif" alt="Logo" class="nav-brand">  
+            <img src="a.gif" alt="Logo" class="nav-brand">  
               <ul class="nav-menu">
                 <li>
                     <a href="#">Wea 1</a>
@@ -46,25 +46,25 @@
         <!--Las tablas abajo de la imagen crikosa-->
         <div class="elementos-weas">
             <div>
-                <img src="Imagenes/Random1.jpg">
+                <img src="Random1.jpg">
                 <h3>*inserte texto random*</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nulla cupiditate perferendis aut, hic corporis iste aliquid veritatis quam animi, blanditiis, quae quos voluptas ab recusandae laudantium odit in totam.</p>
                 <a href="#">Más</a>
             </div>
             <div>
-                <img src="Imagenes/Random2.jpg">
+                <img src="Random2.jpg">
                 <h3>*inserte texto random*</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nulla cupiditate perferendis aut, hic corporis iste aliquid veritatis quam animi, blanditiis, quae quos voluptas ab recusandae laudantium odit in totam.</p>
                 <a href="#">Más</a>
             </div>
             <div>
-                <img src="Imagenes/Random3.jpg">
+                <img src="Random3.jpg">
                 <h3>*inserte texto random*</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nulla cupiditate perferendis aut, hic corporis iste aliquid veritatis quam animi, blanditiis, quae quos voluptas ab recusandae laudantium odit in totam.</p>
                 <a href="#">Más</a>
             </div>
             <div>
-                <img src="Imagenes/REI CHIKITA.jpg">
+                <img src="REI CHIKITA.jpg">
                 <h3>*Larga vida a Rei Chikita*</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nulla cupiditate perferendis aut, hic corporis iste aliquid veritatis quam animi, blanditiis, quae quos voluptas ab recusandae laudantium odit in totam.</p>
                 <a href="#">Más</a>
